<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:orientation="vertical"
android:background="@drawable/about_background"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="com.ezgo.index.CloudvisionActivity">

<!-- 提示區-->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    android:layout_weight="1"
    android:gravity="center">

    <TextView
        android:id="@+id/answer_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:textSize="28dp"
        android:textColor="#142e14"
        android:gravity="center"
        android:text="@string/CV_answerHint"/>

    <ImageView
        android:id="@+id/answer_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

</LinearLayout>

<!-- 答案區-->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/image_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="#142e14"
        android:padding="5dp"
        android:textSize="28dp"
        android:gravity="center"
        android:text="@string/CV_hint"/>

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitCenter"/>

</LinearLayout>

<!-- 開始拍攝按鈕-->
<Button
    android:id="@+id/btn_CV"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/ar_button_size"
    android:layout_marginBottom="15dp"
    android:background="@drawable/btn_reward"
    android:textSize="28dp"
    android:textColor="@color/whiteColor"
    android:layout_gravity="center_horizontal"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:text="@string/CV_action"
    android:visibility="visible"/>

<Button
    android:id="@+id/btn_NextPage"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/ar_button_size"
    android:layout_marginBottom="15dp"
    android:background="@drawable/btn_reward"
    android:textSize="28dp"
    android:textColor="@color/whiteColor"
    android:layout_gravity="center_horizontal"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:text="@string/CV_introductionTitle"
    android:visibility="gone"/>
</LinearLayout>