<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_worksheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="15dp"
    tools:context="com.ezgo.index.WorksheetActivity"
    android:background="@color/worksheet_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ImgViewTop"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/title"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:gravity="center_vertical"/>

    <LinearLayout
        android:id="@+id/textDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textHint"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="#000000"/>

        <ScrollView
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/textDescription"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

        </ScrollView>

    </LinearLayout>


    <RadioGroup
        android:id="@+id/rg"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ImgViewBottom"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnResume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/worksheet_btnResume"
            android:layout_gravity="bottom"
            android:textSize="30dp" />

        <Button
            android:id="@+id/btnNextquest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/worksheet_btnNextquest"
            android:layout_gravity="bottom"
            android:textSize="30dp" />

        <Button
            android:id="@+id/btnChk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/worksheet_btnChk"
            android:layout_gravity="bottom"
            android:textSize="30dp" />

    </LinearLayout>


</LinearLayout>
